refactor RawData to use Optional for engineRPM and implement OBD2Dyno constructor and threading